Updated composer to use Satis

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
     "name": "olcs/autoload",
     "description": "OLCS optimised autoloader",
+    "repositories": [
+        {
+            "packagist": false
+        },
+        {
+            "url": "http://satis.inf.mgt.mtpdvsa",
+            "type": "composer"
+        }
+    ],
     "bin": ["bin/autoload"]
 }
